--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ACT B2B</title>
+    <script>
+      window.onload = function() {
+        // Check if the flag indicating first-time load exists in sessionStorage
+        if (!sessionStorage.getItem('firstTimeLoad')) {
+          // Set the flag in sessionStorage to indicate the page has been loaded for the first time
+          sessionStorage.setItem('firstTimeLoad', 'true');
+        } else {
+          // The page is being refreshed, prevent redirection to the homepage
+          console.log('Page is being refreshed.');
+          // You can perform actions here to prevent redirection to the homepage
+          // For example, you can redirect to another page or show a message
+        }
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
