change title text

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ACT B2B</title>
+    <title>ANT B2B</title>
     <script>
       window.onload = function() {
         // Check if the flag indicating first-time load exists in sessionStorage
